--- a/assets/style.css
+++ b/assets/style.css
@@ -92,3 +92,23 @@ body{
     overflow-wrap: break-word;
     line-height: 2;
 }
+
+ul#action-list{
+    padding: 0px;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+ul#action-list li{
+    display: inline-block;
+    list-style: none;
+    margin: 0px 10px;
+}
+
+ul#action-list li a{
+    text-decoration: none;
+    color: white;
+    background-color: #2840c5;
+    padding: 10px;
+}
