--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -11,14 +11,14 @@ body{
     position: relative;
     background: url(../images/back.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 .formWrapper{
     margin-top: 25px;
-    height: 70px;
     position: relative;
 }
 .field-wrapper input{
-    width: calc(100% - 20px);
+    width: calc(100% - 22px);
     padding: 10px;
     outline: none;
     border: 1px solid #2840c5;
@@ -79,7 +79,6 @@ body{
     padding: 10px;
     margin: 0 auto;
     position: relative;
-    top: 70px;
 }
 #api #api-response{
     height: 100%;
@@ -98,9 +97,10 @@ ul#action-list{
 }
 
 ul#action-list li{
-    display: inline-flex;
+    display: block;
     list-style: none;
-    margin: 0px 10px;
+    margin: 0px;
+    line-height: 65px;
 }
 
 ul#action-list li a{
@@ -111,10 +111,17 @@ ul#action-list li a{
 }
 
 main{
-    width: 700px;
+    width: 320px;
     margin: 0 auto;
     padding: 15px;
-    height: 500px;
+    min-height: 500px;
     background: white;
     margin-top: 25px;
+}
+
+code{
+    max-width: 300px;
+    display: inline-block;
+    word-wrap: break-word;
+    line-height: 28px
 }
